Update 2. Workflow & Architecture.md

--- a/docs/2. Workflow & Architecture.md
+++ b/docs/2. Workflow & Architecture.md
@@ -22,7 +22,23 @@
 
 3\. Step 3: Load refined datasets into curated Lakehouse tables ready for analysis and visualization.
 
+## Data Quality Layer
 
+### Quality Infrastructure
+- **data_quality_log** - Detailed validation results
+- **data_quality_summary** - High-level quality metrics
+- **Validation Notebooks** - Automated check execution
+
+### Quality Flow
+
+Raw Data → Staging Tables → Quality Validation → [PASS/FAIL Decision] ↓ PASS → Transformation Layer FAIL → Alert & Investigation
+
+
+### Quality Checks
+- Completeness (nulls, row counts)
+- Uniqueness (primary keys, duplicates)
+- Validity (data types, formats, ranges)
+- Business Logic (price >= cogs, binary flags)
 
 \## Automation/CI-CD  
 
@@ -31,4 +47,5 @@
 \- Schedule pipelines for regular refresh of data ingestion and transformation.  
 
 \- Trigger points: Data arrival, pipeline completion, and deployment of updated Power BI dashboards.
+
 
